<resources>
    <string name="app_name">MySelf</string>
    <string name="title_text">Self. Gratitude. Journal</string>
    <string name="greateful_text">What are you greateful for today?</string>
    <string name="get_started_text">GET STARTED</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="or_text">Or</string>
    <string name="login_text">LOGIN</string>
    <string name="create_text">CREATE ACCOUNT</string>
    <string name="username_hint">Username</string>
    <string name="todo">TODO</string>
    <string name="post_title" />
    <string name="thoughts">Your Thoughts</string>
    <string name="save_button">Save</string>
    <string name="title_hint">Title</string>
    <string name="menu_title">Add Thoughts</string>
    <string name="signout">Signout</string>
    <string name="no_thoughts_hint">Write a Journal Entry by clicking the \"+\" icon above</string>
</resources>